  also requires double-clicks.

- If the user and system macro directories have a subdirectory with the
  same name, the contents of the subdirectories are merged in the
  "Macros" menu. Previously, one could end up with two "Text" menus, for
  instance.

- The plugin list in the "Install Plugins" and "Update Plugins" dialog
  boxes is now categorized.

+ Bug Fixes:

- The action "Insert Tab and Indent" was broken.

- Backed out Rex Young's ReadWriteLock.java fix since it caused
  deadlocks.

- Fixed some long-standing bugs in the reverse search code.

- Dialogs that are shown by other dialogs have been updated to have the
  invoking dialog as their parent, instead of the containing frame. This
  should fix problems with some windows obscuring others, etc.

- Fixed a possible ClassCastException that could occur if macro
  directories were nested.

- "Rectangular selection mode" status message was not being shown on
  MacOS X.

* Version 4.1pre6

Thanks to Cullen Linn, Giulio Piancastelli, John Perry, Joshua Miller,
Kris Kopicki, Marcelo Vanzin, Peter Cox, Rex Young, Ryan Grove,
Rudolf Widmann and Steve Snider for contributing to this release.

+ Help System Changes:

- The user's guide, FAQ, and plugin documentation is now searchable. An
  in-memory index is built the first time a search is performed during a
  jEdit session. Currently, the search engine is very simple and only
  performs whole-word matching (so searching for "auto save" and
  "autosave" will yield different results). Results are ranked according
  to how many times that word appears in the document. Searching for
  multiple words returns all documents that contain at least one of the
  words, however documents containing multiple search terms are ranked
  higher.

+ Editing Changes:

- The "Indent on Enter" and "Indent on Tab" options are no longer.
  (Actually, the former was removed in pre5, but I forgot to mention it
  in the changelog).
